modify db URL